# markov-decision-processes

./: .gitignore  LICENSE  README.md  main.py  nx.json  package-lock.json  package.json  pyproject.toml  tsconfig.json
.devcontainer/: Dockerfile  README.md  devcontainer.json  docker-compose.dev.yaml  docker-compose.yml  post-create.sh
backend/: pyproject.toml
backend/app/api/routers/: __init__.py  health.py  mdp.py
backend/app/core/: config.py
backend/app/models/: __init__.py  mdp.py
backend/app/services/: gridworld.py  mdp_service.py
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  DEVELOPMENT.md  WORKSPACE_SETUP.md
frontend/: package.json  tsconfig.json
scripts/: clean.sh  format.sh  setup.sh  test-all.sh
