[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "markov-decision-processes"
version = "0.1.0"
description = "Interactive MDP visualizer with FastAPI backend and Next.js frontend"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Michael", email = "michael@example.com" }]
keywords = [
    "mdp",
    "reinforcement-learning",
    "value-iteration",
    "policy-iteration",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

# Workspace members - installing root installs all members
dependencies = [
    "backend",
    "matplotlib>=3.10.7",
    "ruff>=0.14.7",
]

[project.optional-dependencies]
# Development tools (shared across workspace)
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.7.0",
    "ruff>=0.1.6",
]

# Install all workspace members with dev dependencies
all = ["markov-decision-processes[dev]", "backend[dev]"]

[tool.uv]
package = true

[tool.uv.workspace]
members = ["backend"]

[tool.uv.sources]
backend = { workspace = true }

[project.scripts]
mdp-server = "backend.app.main:run"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["backend/tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--cov=backend",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

# Black configuration
[tool.black]
line-length = 100
target-version = ["py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | node_modules
  | frontend
)/
'''

# Ruff configuration
[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
    ".venv",
    "node_modules",
    "frontend",
    "__pycache__",
    ".pytest_cache",
    ".mypy_cache",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501", # line too long (handled by black)
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"] # unused imports
"**/tests/**/*.py" = [
    "ARG",
    "S",
] # allow unused args and security issues in tests

[tool.ruff.lint.isort]
known-first-party = ["backend"]

# Mypy configuration
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = ["matplotlib.*", "numpy.*"]
ignore_missing_imports = true

# Coverage configuration
[tool.coverage.run]
source = ["backend"]
omit = ["*/tests/*", "*/__pycache__/*", "*/site-packages/*", ".venv/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
